# labexample

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
cmake/: SDL2-external.cmake
cmake-ext/: SDL2-external.cmake  glm-external.cmake
src/: draw.cpp  draw.h  main.cpp
